src/objects/DynamicPageConfig__c.object
<CustomObject>
    <fields>
        <fullName>ButtonFields__c</fullName>
        <label>ButtonFields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fields__c</fullName>
        <label>Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RelatedList__c</fullName>
        <label>RelatedList</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>DynamicPageConfig</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>DynamicPageConfig Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DynamicPageConfigs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>